tests/comp/sem/invalid/undefined_parameter_type.mj
class A {

	public int foo(/*** B x ***/) {}

	public static void main(String[] args) {
	}

}
